fix: Wrong margin for mobile bugged header

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -36,6 +36,6 @@
 
 @media (max-width: 768px) {
   .section {
-    margin-bottom: 80%;
+    margin-bottom: 100%;
   }
 }
